<resources>
    <string name="app_name">AndroidFlaskExample</string>
    <string name="port_number">Port Number</string>
    <string name="ipv4_address">IPv4 Address</string>
    <string name="host_url">192.168.1.8</string>
    <string name="host_end_point">5000</string>
    <string name="connect_to_server">Connect to Server</string>
    <string name="message_from_the_server">Message from the Server ...</string>
    <string name="image_path">Image Path Appears Here</string>
</resources>